--- a/BLAZAMGui/UI/Settings/Permissions/ImpersonateUser.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/ImpersonateUser.razor
@@ -1,4 +1,5 @@
-﻿@inherits AppComponentBase
+﻿@using Newtonsoft.Json
+@inherits AppComponentBase
 @inject IJSRuntime JSRuntime
 
 <form action="" @onsubmit=@AttemptSignIn id="login-form">
@@ -30,32 +31,36 @@
 
 </form>
 @code {
+    private LoginRequest imperonationRequest = new(){ Impersonation=true};
     public IDirectoryEntryAdapter? User { get; set; }
     bool attemptingImpersonation;
     async void AttemptSignIn()
     {
-        string? authenticationResult=null;
+        imperonationRequest.Username = User?.SamAccountName;
+        imperonationRequest.Password = "impersonate";
+        LoginRequest? authenticationResult = null;
         if (User != null)
         {
             try
             {
-                authenticationResult = await JSRuntime.InvokeAsync<string>("attemptSignIn", null);
+                var response = await JSRuntime.InvokeAsync<string>("attemptSignIn", imperonationRequest);
+                authenticationResult = JsonConvert.DeserializeObject<LoginRequest>(response);
 
             }
-            catch
+            catch (Exception ex)
             {
-                
+                Loggers.SystemLogger.Error("Error attempting to impersonate " + User.CanonicalName + "{@Error}", ex);
             }
         }
 
 
 
-        if (!authenticationResult.IsNullOrEmpty())
+        if (authenticationResult!=null)
         {
-            int resultCode = int.Parse(authenticationResult);
+            
             attemptingImpersonation = false;
 
-            switch ((LoginResultStatus)resultCode)
+            switch (authenticationResult.AuthenticationResult)
             {
 
                 case LoginResultStatus.NoUsername:
