--- a/BLAZAMGui/UI/Outputs/AppDocumentationButton.razor
+++ b/BLAZAMGui/UI/Outputs/AppDocumentationButton.razor
@@ -1,7 +1,7 @@
 ﻿@inject IStringLocalizer<AppLocalization> AppLocalization
 @if (!Page.IsNullOrEmpty())
 {
-    <MudTooltip Text=@AppLocalization["Click to view help documentation"] RootClass="d-inline" Class="px-3"> 
+    <MudTooltip Text=@AppLocalization["Click to view help documentation"] RootClass="d-inline" Class="pa-4"> 
         <MudFab StartIcon="@Icon"
                 Href=@("https://docs.blazam.org"+@Page)
                 Target="_blank"
