Fix timezone on Change Entries Widget

--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
@@ -28,7 +28,14 @@
                 </MudTooltip>
             </CellTemplate>
         </TemplateColumn>
-        <PropertyColumn Property="x=>x.LastChanged" Title="Changed" />
+        <TemplateColumn Title=@AppLocalization["Changed"]>
+            <CellTemplate>
+                @if (context.Item?.LastChanged != null)
+                {
+                    <MudText>@context.Item.LastChanged?.ToLocalTime()</MudText>
+                }
+            </CellTemplate>
+        </TemplateColumn>
 
     </Columns>
     <PagerContent>
