New User Activity Page in settings

--- a/BLAZAM/Pages/Configure/Settings.razor
+++ b/BLAZAM/Pages/Configure/Settings.razor
@@ -96,6 +96,18 @@
         </MudTabPanel>
         <MudTabPanel>
             <ChildContent>
+                <UserActivity />
+
+            </ChildContent>
+            <TabContent>
+                @AppLocalization["User Activity"]
+            </TabContent>
+
+
+        </MudTabPanel>
+
+        <MudTabPanel>
+            <ChildContent>
                 <SystemSettings />
 
             </ChildContent>
