--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -9,7 +9,7 @@
 
 
     <MudStack Row=true>
-        <MudText Align="Align.Center">
+        <MudText Class="align-middle" Align="Align.Center">
             @AppLocalization["Templates"]
 
         </MudText>
