--- a/BLAZAMGui/Layouts/AppUserButton.razor
+++ b/BLAZAMGui/Layouts/AppUserButton.razor
@@ -21,7 +21,7 @@
 
     </ActivatorContent>
     <ChildContent>
-        <MudText Typo=Typo.body2 Color="Color.Dark" Align=Align.Center Class="py-3 w-100 " Style="text-align:center;    background-color: var(--mud-palette-drawer-background);">
+        <MudText Typo=Typo.body2 Color="Color.Info" Align=Align.Center Class="py-3 w-100 " Style="text-align:center;    background-color: var(--mud-palette-drawer-background);">
             @CurrentUser.Username
         </MudText>
         <MudDivider/>
