--- a/BLAZAMGui/Layouts/MainLayout.razor
+++ b/BLAZAMGui/Layouts/MainLayout.razor
@@ -2,7 +2,7 @@
 @using System.Security.Claims;
 @inherits LayoutComponentBase
 
-@inject NavigationManager Nav
+@inject AppNavigationManager Nav
 @inject IActiveDirectoryContext directory
 @inject IApplicationUserStateService UserStateService
 @inject IAppDatabaseFactory DbFactory
