Add input auto-focusing for most applicable places

--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -8,7 +8,7 @@
         @foreach (var user in LockedUsers)
         {
 
-            <MudCard @onclick="@(()=>{Nav.NavigateTo("/users/search/" + user.SamAccountName);})">
+            <MudCard @onclick="@(()=>{Nav.NavigateTo(user.SearchUri);})">
 
 
                 @user.DisplayName <br>
