--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -7,7 +7,7 @@
 <MudTextField Label="@AppLocalization["Email Address"]" @bind-Value="@User.Email" Disabled=true />
  *@
 
-<MudTextField Validation="@(newPassword.IsNullOrEmpty()==false)" Label="@AppLocalization["New Password"]" InputType="InputType.Password" @bind-Value="@newPassword" />
+<MudTextField AutoFocus=true Immediate=true Validation="@(newPassword.IsNullOrEmpty()==false)" Label="@AppLocalization["New Password"]" InputType="InputType.Password" @bind-Value="@newPassword" />
 
 
 <MudTextField Immediate=true Validation="@(newPasswordConfirm.Equals(newPassword))" Label="@AppLocalization["Confirm New Password"]" InputType="InputType.Password" @bind-Value="@newPasswordConfirm" />
