--- a/BLAZAMGui/UI/Users/NewUserNameEntry.razor
+++ b/BLAZAMGui/UI/Users/NewUserNameEntry.razor
@@ -5,7 +5,7 @@
 
 
 
-        <MudTextField Label="@AppLocalization["First Name"]" @bind-Value="@NewUserName.GivenName" />
+        <MudTextField AutoFocus=true Label="@AppLocalization["First Name"]" @bind-Value="@NewUserName.GivenName" />
 
 
 
