--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -6,9 +6,10 @@
                  Label="@Label"
                  AnchorOrigin="@AnchorOrigin"
                  TransformOrigin="@TransformOrigin"
-@bind-Value="SelectedResult"
-@bind-Text=@SearchTerm
-@ref=AutoComplete
+                 @bind-Value="SelectedResult"
+                 @bind-Text=@SearchTerm
+                 @ref=AutoComplete
+                 AutoFocus=@AutoFocus
                  SearchFuncWithCancel="@GetResults"
                  DebounceInterval=500
                  ResetValueOnEmptyText="true"
@@ -56,14 +57,14 @@
     </NoItemsTemplate>
     <MoreItemsTemplate>
         <MudButton OnClick="ShowMoreResults" Color="Color.Primary">@AppLocalization["Show more"]</MudButton>
-        <MudText>
-            More results than shown...
-        </MudText>
-    </MoreItemsTemplate>
-</MudAutocomplete>
+            <MudText>
+                More results than shown...
+            </MudText>
+        </MoreItemsTemplate>
+    </MudAutocomplete>
 
-@code {
-    #nullable disable warnings
+    @code {
+#nullable disable warnings
     [Parameter]
     public Func<object> Validation { get; set; }
     [Parameter]
@@ -84,6 +85,8 @@
 
     [Parameter]
     public bool Disabled { get; set; }
+    [Parameter]
+    public bool AutoFocus { get; set; }
 
     /// <summary>
     /// The maximum number of results to show in the autocomplete suggestion list
@@ -128,7 +131,7 @@
     async Task ShowMoreResults()
     {
         MaxResults += 10;
-        await GetResults(SearchTerm,new());
+        await GetResults(SearchTerm, new());
         await InvokeAsync(StateHasChanged);
     }
 
@@ -190,11 +193,11 @@
 
 
 
-    private async Task<IEnumerable<IDirectoryEntryAdapter>> GetResults(string searchText ,CancellationToken token)
+    private async Task<IEnumerable<IDirectoryEntryAdapter>> GetResults(string searchText, CancellationToken token)
     {
         var newSource = new CancellationTokenSource();
         token = newSource.Token;
-        foreach(var source in _cancellationList)
+        foreach (var source in _cancellationList)
         {
             source.Cancel();
         }
@@ -203,7 +206,7 @@
 
         return await Task.Run(() =>
          {
- 
+
              if (!token.IsCancellationRequested && searchText != null)
              {
                  SearchResults = new List<IDirectoryEntryAdapter>();
@@ -213,10 +216,10 @@
                  search.ObjectTypeFilter = SearchObjectType;
                  search.GeneralSearchTerm = searchText.Replace(" ", "*");
                  search.EnabledOnly = !SearchDisabled;
-                 search.MaxResults = MaxResults+1;
+                 search.MaxResults = MaxResults + 1;
                  if (!search.GeneralSearchTerm.Equals(String.Empty))
                  {
-                     
+
                      var temp = (search.Search<DirectoryEntryAdapter, IDirectoryEntryAdapter>(token)).Where(r => r.CanRead);
 
                      if (!token.IsCancellationRequested)
@@ -235,7 +238,7 @@
                                  temp = filteredResults;
                              }
                          }
-                        if (!token.IsCancellationRequested)
+                         if (!token.IsCancellationRequested)
                          {
                              SearchResults = temp;
                              return SearchResults;
