Improve status elements presentation

--- a/BLAZAMGui/UI/Outputs/StatusCheck.razor
+++ b/BLAZAMGui/UI/Outputs/StatusCheck.razor
@@ -8,7 +8,7 @@
 }
 else
 {
-    <MudChip Color=@Color Icon="@Icon">@Text</MudChip>
+    <MudChip Size=Size.Small Color=@Color Icon="@Icon">@Text</MudChip>
 
 }
 
