Minor GUI improvements

--- a/BLAZAMGui/UI/Groups/AssignToModalContent.razor
+++ b/BLAZAMGui/UI/Groups/AssignToModalContent.razor
@@ -122,7 +122,7 @@
     public EventCallback<GroupMembershipChange> OnGroupMembershipChange { get; set; }
 
     /// <summary>
-    /// The directry entry that we are assigning
+    /// The directory entry that we are assigning
     /// </summary>
     [Parameter]
     public IGroupableDirectoryAdapter DirectoryModel { get; set; }
